tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_unresolved_path/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Could not resolve 'some' in path
  ┌─ src/main.nr:3:22
  │
3 │             let _z = some::path::to::a::func(x);
  │                      ----
  │

Aborting due to 1 previous error
