tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_unresolved_path/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Could not resolve 'some' in path
  ┌─ src/main.nr:3:22
  │
3 │             let _z = some::path::to::a::func(x);
  │                      ----
  │

Aborting due to 1 previous error
